<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- General -->
    <string name="app_name">Connectivity Manager</string>
    <string name="enable_3g">Enable mobile data</string>
    <string name="disable_3g">Disable mobile data</string>
	<string name="tg">Mobile data</string>
    <string name="tg_enabled">Mobile data enabled</string>
    <string name="tg_disabled">Mobile data disabled</string>
    <string name="disable_service">Exit service</string>
	<string name="start">Enable service</string>
	<string name="stop">Disable service</string>
	<string name="service_started">Service enabled</string>
	<string name="service_stopped">Service disabled</string>
    <string name="wifi_disable">Disable Wi-Fi</string>
	<string name="wifi_disabled">Wi-Fi disabled</string>
	<string name="wifi_enabled">Wi-Fi enabled</string>
	<string name="wifi_enable">Enable Wi-Fi</string>
	<string name="wifi">Wi-Fi</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	
	
    <!-- Main -->
	<string name="wf_timer_name">Wi-Fi watcher</string>
	<string name="timed_3g_name">Time-limited mobile data</string>
	<string name="timed_wf_name">Time-limited Wi-Fi</string>
	<string name="scheduler_name">Connection scheduler</string>
	
	
	<!-- Wi-Fi Watcher -->
    <string name="retry_connection">Retry connection every 30 minutes</string>
	<string name="set_disable_actions">When Wi-Fi is disabled</string>
	<string name="watcher_tooltip_text">Wi-Fi will be enabled automatically together with the service. \nWhen the service is started it will periodically check if Wi-Fi has a network connection. After a maximum of </string>
	<string name="watcher_tooltip_text_end"> minutes without connection, Wi-Fi will be disabled.</string>
	<string name="wifi_disable_delay">Delay (minutes)</string>
	<string name="wifi_disabled_lost_conn">Wi-Fi disabled after connection was lost</string>
	
	<!-- Scheduler -->	
	<string name="add">Add new</string>
	<string name="and">and</string>
	<string name="confirm_delete_short">Delete period</string>
	<string name="confirm_delete">Are you sure you want to delete this period?\nThis cannot be undone.</string>
	<string name="disable">Disable</string>
	<string name="disable_between">Disable between</string>
	<string name="done">Done</string>
	<string name="disabled">Connections disabled</string>
	<string name="disabled_schedule">Connections disabled according to schedule</string>
	<string name="enabled">Connections enabled</string>
	<string name="enabled_schedule">Connections enabled according to schedule</string>
	<string name="pick_time">Pick time</string>
 	<string name="picker_hint">Press the buttons or fling the text to change time.</string>
	<string name="scheduler_tooltip_text">This service will automatically disable Wi-Fi and/or mobile data during the periods set below.\nAdd and setup a new period by pressing  "Add new", delete a period by long pressing it. \n\nNote that if Wi-Fi or mobile data is enabled after being automatically disabled, it will not be automatically be disabled again until the next day.</string>
	<string name="scheduler_popup_tooltip_text">Note that if connections are set to be reenabled before being disabled, they will be enabled on the next day.</string>
	<string name="show_notification">Show notification</string>
	<string name="use_on">Use on</string>
	<string name="wifi_disable_between">Disable Wi-Fi between:</string>
	<string name="tg_disable_between">Disable mobile data between:</string>
	<string name="monday_short">Mo</string>
	<string name="tuesday_short">Tu</string>
	<string name="wednesday_short">We</string> 
	<string name="thursday_short">Th</string>
	<string name="friday_short">Fr</string>
	<string name="saturday_short">Sa</string>
	<string name="sunday_short">Su</string>
	<string name="to">to</string>
	
	
	
	
	<!-- Timed Wi-Fi -->
	<string name="action">Action</string>
	<string name="timed_wf_tooltip_text">When the service is started Wi-Fi will be enabled or disabled during a set period of time. After this time Wi-Fi status will be reset.</string>
    <string name="timed_wf_duration">Duration (hours : minutes)</string>
	<string name="wifi_disabled_set_time">Wi-Fi disabled after set time</string>
	<string name="wifi_enabled_set_time">Wi-Fi enabled after set time</string>
    
    <!-- Timed 3G -->
    <string name="timed_tg_tooltip_text">When the service is started mobile data will be enabled or disabled during a set period of time. After this time mobile data status will be reset.</string>
	<string name="tg_disabled_set_time">Mobile data disabled after set time</string>
	<string name="tg_enabled_set_time">Mobile data enabled after set time</string>
    
</resources>