<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">
    
    <TextView
        android:id="@+id/timed_wf_tooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        />
    
    <!-- Options -->
    <LinearLayout	
        android:layout_below="@+id/timed_wf_tooltip"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
   		android:padding="20dip">
   		
        
	 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timed_wf_duration"
        android:textSize="15dip"
        />    
        
	<!-- Divider -->
  	<include layout="@layout/divider"/>
  	
    <Spinner
        android:id="@+id/duration_input"
        android:layout_marginTop="10dip"
        android:layout_width="150dip"
        android:layout_height="wrap_content"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/action"
        android:textSize="15dip"/>
    
    
    <!-- Divider -->
  	<include layout="@layout/divider"/>
    
  	<RadioGroup 
  	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <RadioButton android:id="@+id/connect_check"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:paddingLeft="45dip"
	        android:text="@string/wifi_enable"
	        android:textSize="13dip"
	        android:checked="true"/>
	    
	     <RadioButton android:id="@+id/disconnect_check"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:paddingLeft="45dip"
	        android:text="@string/wifi_disable"
	        android:textSize="13dip"
	        />
    </RadioGroup>
     
    </LinearLayout>
    <!-- /Options -->
    
    <!-- Buttons -->
    <LinearLayout 
		android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:gravity="center">
	    <Button
	        android:id="@+id/timed_wf_startbutton"
	        android:layout_width="match_parent"
	        android:layout_height="50dip"
	        android:text="@string/start" />
	
	    <Button
	    	android:id="@+id/timed_wf_stopbutton"
	    	android:layout_width="match_parent"
			android:layout_height="50dip"
	    	android:text="@string/stop" />
    </LinearLayout>
    <!-- /Buttons -->
    

</RelativeLayout>