<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical"
    android:background="@drawable/application_bg"> 
    <ScrollView  
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_above="@+id/toggle_buttons">  
	    <RelativeLayout 
	 	   android:layout_width="match_parent"
	 	   android:layout_height="wrap_content" 
	 	   android:padding = "5dip">
		   <Button 
		        android:id="@+id/wfwatcher_button"
		        android:layout_width="match_parent" 
		        android:layout_height="65dip"
		        android:layout_marginBottom="7dip"
		        android:layout_marginTop="100dip"
		        android:textSize="20dip"
		        android:background="@drawable/button_bg"
		        android:text="@string/wf_timer_name"
		        />
		     <Button  
		        android:id="@+id/scheduler_button"
		        android:layout_below="@+id/wfwatcher_button"
		        android:layout_width="match_parent"
		        android:layout_height="65dip"
		        android:layout_marginBottom="7dip"
		        android:textSize="20dip"
		        android:background="@drawable/button_bg"
		        android:text="@string/scheduler_name"
		     />
		    <Button 
		        android:id="@+id/timed_wf_button"
		        android:layout_below="@+id/scheduler_button"
		        android:layout_width="match_parent"
		        android:layout_height="65dip"
		        android:layout_marginBottom="7dip"
		        android:textSize="20dip"
		        android:background="@drawable/button_bg"
		        android:text="@string/timed_wf_name"
		        />
		    <Button 
		        android:id="@+id/timed_tg_button"
		        android:layout_below="@+id/timed_wf_button"
		        android:layout_width="match_parent"
		        android:layout_height="65dip"
		        android:layout_marginBottom="7dip"
		        android:textSize="20dip"
		        android:background="@drawable/button_bg"
		        android:text="@string/timed_3g_name"
		     />
		    
		  
	    </RelativeLayout>
    </ScrollView>
	<LinearLayout 
	    android:id="@+id/toggle_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"> 
  	 <CheckBox android:id="@+id/main_threeg_enable_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip" 
        android:paddingLeft="45dip"
		android:button="@drawable/check_button_bg"
        android:text="@string/tg" 
        android:textSize="14dip"
        android:textColor="#000000"/>
     <CheckBox android:id="@+id/main_wifi_enable_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
		android:paddingLeft="45dip"
		android:button="@drawable/check_button_bg"
        android:text="@string/wifi" 
        android:textSize="14dip"
        android:textColor="#000000"/>
</LinearLayout>
</RelativeLayout>