<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">

    
    <TextView
        android:id="@+id/tooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        />
    
    <!-- Options -->
    <LinearLayout	
        android:layout_below="@+id/tooltip"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
   		android:padding="20dip">
	 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_deactivate_delay"
        android:textSize="15dip"
        />    
        
	<!-- Divider -->
  	<include layout="@layout/divider"/>
  	
    <Spinner
        android:id="@+id/duration_input"
        android:layout_marginTop="10dip"
        android:layout_width="150dip"
        android:layout_height="wrap_content"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/set_disconnect_actions"
        android:textSize="15dip"/>
    
    
    <!-- Divider -->
  	<include layout="@layout/divider"/>
    
    <CheckBox android:id="@+id/retry_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:paddingLeft="45dip"
        android:text="@string/retry_connection"
        android:textSize="13dip"/>
    
     <CheckBox android:id="@+id/exit_service_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:paddingLeft="45dip"
        android:text="@string/disable_service"
        android:textSize="13dip"
        android:checked="true"/>
    
	<!-- Divider -->
  	<include layout="@layout/divider"/>
    
    <CheckBox android:id="@+id/threeg_enable_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:paddingLeft="45dip"
        android:text="@string/enable_3g" 
        android:textSize="13dip"/>
     <CheckBox android:id="@+id/threeg_disable_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:paddingLeft="45dip"
        android:text="@string/disable_3g" 
        android:textSize="13dip"/>
     
     
    </LinearLayout>
    <!-- /Options -->
    
    <!-- Buttons -->
    <LinearLayout 
		android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:gravity="center">
	    <Button
	        android:id="@+id/startbutton"
	        android:layout_width="match_parent"
	        android:layout_height="50dip"
	        android:text="@string/start" />
	
	    <Button
	    	android:id="@+id/stopbutton"
	    	android:layout_width="match_parent"
			android:layout_height="50dip"
	    	android:text="@string/stop" />
    </LinearLayout>
    <!-- /Buttons -->
</RelativeLayout>