<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    android:background="@drawable/application_bg">
    
    <TextView
        android:id="@+id/timed_tg_tooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textColor="#000000"
        />
    
    <!-- Options -->
    <ScrollView	
        android:id="@+id/timed_3g_scroll"
        android:layout_below="@+id/timed_tg_tooltip"
        android:layout_above="@+id/timed_tg_buttons"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
   		android:padding="5dip">
	 	<LinearLayout        
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
	   		
	        
			 <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/timed_wf_duration"
		        android:textSize="15dip"
        		android:textColor="#000000"
		        />    
		        
			<!-- Divider -->
		  	<include layout="@layout/divider"/>
		  	
		    <Spinner
		        android:id="@+id/tg_duration_input"
		        android:layout_marginTop="10dip"
		        android:layout_width="150dip"
		        android:layout_height="wrap_content"/>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/action"
		        android:textSize="15dip"
        		android:textColor="#000000"/>
		    
		    
		    <!-- Divider -->
		  	<include layout="@layout/divider"/>
		    
		  	<RadioGroup 
		  	    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
			    <RadioButton android:id="@+id/tg_connect_check"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:paddingLeft="45dip"
			        android:text="@string/enable_3g"
			        android:textSize="13dip"
       				android:textColor="#000000"
			        android:checked="true"
			        android:button="@drawable/radio_button_bg"/>
			    
			     <RadioButton android:id="@+id/tg_disconnect_check"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:paddingLeft="45dip"
			        android:text="@string/disable_3g"
			        android:textSize="13dip"
        			android:textColor="#000000"
			        android:button="@drawable/radio_button_bg"/>
		    </RadioGroup>
     	</LinearLayout>
    </ScrollView>
    <!-- /Options -->
    
    <!-- Buttons -->
    <include layout="@layout/bottom_buttons"/>
    

</RelativeLayout>