<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simple_mode"
   	android:layout_width="match_parent"
   	android:layout_height="match_parent"
   	android:orientation="vertical">
	   		     
 	<CheckBox 
 	    android:id="@+id/simple_wf_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
		android:paddingLeft="45dip"
		android:button="@drawable/check_button_bg"
        android:text="@string/wifi_disable_between"
        android:textSize="13dip"       			
     	android:textColor="#000000"/>
 	
    <!-- Divider -->
  	<include layout="@layout/divider"/>
  	
    <LinearLayout 
  	 		android:layout_width="match_parent"
 	 		android:layout_height="wrap_content"
 	 		android:layout_marginBottom="20dip"
 	 		android:orientation="horizontal">
  	
	   <Spinner 
	  	    android:id="@+id/wf_from_spinner"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
			android:paddingLeft="20dip" 
			android:paddingRight="50dip" 
		    android:background="@drawable/spinner_bg"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_marginLeft="15dip"
	        android:layout_marginRight="15dip"
	        android:textColor="#000000"
	        android:textSize="15dip"
	        android:text="@string/and"
	   />
	   <Spinner 
	       	android:id="@+id/wf_to_spinner"
	       	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
			android:paddingLeft="20dip" 
			android:paddingRight="50dip" 
		    android:background="@drawable/spinner_bg"/>
   </LinearLayout>
   
   <LinearLayout 
    	android:id="@+id/scheduler_s_tg_layout"
 	 	android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginBottom="20dip">
	   
	   <CheckBox 
	       	android:id="@+id/simple_tg_check"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
			android:paddingLeft="45dip"
			android:button="@drawable/check_button_bg"
	        android:text="@string/tg_disable_between"
	        android:textSize="13dip"       			
	     	android:textColor="#000000"/>
	   
	    <!-- Divider -->
	  	<include layout="@layout/divider"/>
	  	
	    <LinearLayout 
	  	 		android:layout_width="match_parent"
	 		 	android:layout_height="wrap_content"
	 		 	android:orientation="horizontal">
	   	<Spinner 
	     	android:id="@+id/tg_from_spinner"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
			android:paddingLeft="20dip" 
			android:paddingRight="50dip" 
		    android:background="@drawable/spinner_bg"/> 
		<TextView
		    
	     	android:id="@+id/scheduler_and_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_marginLeft="15dip"
	        android:layout_marginRight="15dip"
	        android:textColor="#000000"
	        android:textSize="15dip"
	        android:text="@string/and"
		   />
	   	<Spinner 
	       	android:id="@+id/tg_to_spinner"
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
			android:paddingLeft="20dip" 
			android:paddingRight="50dip" 
		    android:background="@drawable/spinner_bg"/>
	   </LinearLayout>
   </LinearLayout>
</LinearLayout>